<?xml version="1.0"?>
<package format="2">
  <name>kumaco_control</name>
  <version>0.1.0</version>
  <description>The kumaco_control package</description>

  <maintainer email="hm@dream-drive.net">hirokazu onomichi</maintainer>

  <license>MIT</license>
  <url type="website">https://dream-drive.net</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
